Fix feign mappings for spotify api responses